@@ -6,8 +6,7 @@
 # This code is covered by the GNU General Public License. For details see the file "COPYING".
 #
 
-CPPFLAGS= -D_DEBUG
-CFLAGS= -Wall -Wstrict-prototypes -fomit-frame-pointer -O2 -pipe -mips2
+CFLAGS= -Wall -Wstrict-prototypes -fomit-frame-pointer -O2 -pipe -mips2 -fno-strict-aliasing
 
 e2fsck-lcd:
 
